--- a/index.html
+++ b/index.html
@@ -164,16 +164,10 @@
         crossorigin="anonymous"></script>
 
     <script src="js/main.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBP2r8J-NE5LFiw-gC04JDmXOkSxv7phxE&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"
         async defer></script>
 </body>
 
 </html>
 
-
-<!-- 
-Klipovi 
-Razvodnici
-Pumpe
- -->
 
